Don't print prompt in release builds

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -15,3 +15,5 @@ install(TARGETS ${CMAKE_PROJECT_NAME} DESTINATION ${CMAKE_BUILD_TYPE})
 install(FILES
     $<TARGET_FILE_DIR:${CMAKE_PROJECT_NAME}>/$<TARGET_NAME:${CMAKE_PROJECT_NAME}>.uf2
     DESTINATION ${CMAKE_BUILD_TYPE})
+
+target_compile_definitions(${CMAKE_PROJECT_NAME} PRIVATE $<$<CONFIG:Debug>:WITH_PROMPT>)
