--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -11,6 +11,23 @@ pico_add_extra_outputs(${CMAKE_PROJECT_NAME})
 
 target_link_libraries(${CMAKE_PROJECT_NAME} pico_stdlib)
 
+#
+# On chip debug configuration
+#
+find_program(OPENOCD_EXECUTABLE openocd)
+if(OPENOCD_EXECUTABLE)
+    add_custom_target(upload
+        COMMAND ${OPENOCD_EXECUTABLE}
+                -f interface/cmsis-dap.cfg
+                -f target/rp2040.cfg
+                -c 'adapter speed 5000'
+                -c 'program $<TARGET_FILE:${CMAKE_PROJECT_NAME}> verify reset exit'
+        DEPENDS ${CMAKE_PROJECT_NAME})
+endif()
+
+#
+# Intallation
+#
 install(TARGETS ${CMAKE_PROJECT_NAME} DESTINATION ${CMAKE_BUILD_TYPE})
 install(FILES
     $<TARGET_FILE_DIR:${CMAKE_PROJECT_NAME}>/$<TARGET_NAME:${CMAKE_PROJECT_NAME}>.uf2
